fix(images): better row alignment and table captions for no data

--- a/src/app/images/components/GenericTable/_index.scss
+++ b/src/app/images/components/GenericTable/_index.scss
@@ -1,14 +1,18 @@
 .generic-table {
-  .custom {
-    width: 5rem;
+  th.release {
+    width: 12rem;
   }
 
-  .action, .size {
-    width: 4rem;
+  td.release {
+    width: 11rem;
   }
 
   .architecture, .size {
-    width: 7rem;
+    width: 9rem;
+  }
+
+  .status {
+    width: 17rem;
   }
 
   .individual-row {
